--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -75,13 +75,7 @@ parts:
     organize:
       snap/video-trimmer/current: .
     parse-info: [ usr/share/metainfo/org.gnome.gitlab.YaLTeR.VideoTrimmer.metainfo.xml ]
-  deps:
-    after: [ video-trimmer ]
-    plugin: nil
-    stage-packages:
-      - libgtk-4-media-gstreamer
-    prime:
-      - usr/lib/$CRAFT_ARCH_TRIPLET/gtk-4.0/4.0.0/media/libmedia-gstreamer.so
+
 slots:
   video-trimmer:
     interface: dbus
@@ -96,6 +90,7 @@ apps:
     environment:
       LD_LIBRARY_PATH: $SNAP/usr/lib/$CRAFT_ARCH_TRIPLET:$SNAP/usr/lib:/snap/gnome-platform/usr/lib:$SNAP/gnome-platform/usr/lib/$CRAFT_ARCH_TRIPLET:$LD_LIBRARY_PATH
       GTK_PATH: $SNAP/gnome-platform/usr/lib/$CRAFT_ARCH_TRIPLET/gtk-4.0:$GTK_PATH
+      GST_PLUGIN_PATH: $SNAP/gnome-platform/usr/lib/$CRAFT_ARCH_TRIPLET/gstreamer-1.0:$SNAP/gnome-platform/usr/lib/$CRAFT_ARCH_TRIPLET/gstreamer1.0:$SNAP/gnome-platform/usr/lib/$CRAFT_ARCH_TRIPLET
     plugs:
       - home
       - removable-media
