specify architectures to build

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -3,7 +3,10 @@ base: core22 # the base snap is the execution environment for this snap
 adopt-info: video-trimmer
 grade: stable # must be 'stable' to release into candidate/stable channels
 confinement: strict # use 'strict' once you have the right plugs and slots
-
+architectures:
+  - build-on: amd64
+  - build-on: arm64
+  - build-on: armhf
 parts:
   ffmpeg:
     # WORKAROUND:
