use ffmpeg content snap

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -8,40 +8,6 @@ architectures:
   - build-on: arm64
 
 parts:
-  ffmpeg:
-    # WORKAROUND:
-    # Build from source because the ffmpeg package installs libraries as dependencies
-    # that conflict with the Gnome extension
-    plugin: autotools
-    source: https://git.ffmpeg.org/ffmpeg.git
-    source-branch: 'n4.4'
-# ext:updatesnap
-#   version-format:
-#     ignore: true
-    autotools-configure-parameters:
-      # WORKAROUND: Install to /usr instead of /usr/local because it's not in search paths
-      - --prefix=/usr
-      - --disable-debug
-      - --disable-doc
-      - --disable-static
-      - --enable-gpl
-      - --enable-shared
-      - --disable-ffplay
-      - --disable-devices
-      - --enable-gnutls
-      - --enable-libmp3lame
-      - --enable-libvorbis
-    build-packages:
-      - nasm
-      - libgnutls28-dev
-      - libmp3lame-dev
-      - libvorbis-dev
-    stage-packages:
-      - libmp3lame0
-    prime:
-      - -usr/include
-      - -usr/share
-      - -usr/lib/pkgconfig
   rustup:
     plugin: nil
     build-packages: [wget]
@@ -61,21 +27,23 @@ parts:
     override-prime: |
       echo 'Skip Prime'
   video-trimmer:
-    after: [ rustup, ffmpeg ]
-    # See 'snapcraft plugins'
+    after: [ rustup ]
     plugin: meson
     source: https://gitlab.gnome.org/YaLTeR/video-trimmer.git
     source-tag: 'v0.8.2'
     source-depth: 1
     build-environment:
+      - PATH: /snap/ffmpeg-2204-sdk/current/usr/bin:$PATH
       - RUSTUP_HOME: $CRAFT_STAGE/usr/share/rust
       - CARGO_HOME: $CRAFT_STAGE/usr/share/rust
       - CARGO_BUILD_JOBS: $CRAFT_PARALLEL_BUILD_COUNT
       - GI_TYPELIB_PATH: /snap/gnome-42-2204-sdk/current/usr/lib/girepository-1.0:/snap/gnome-42-2204-sdk/current/usr/lib/$CRAFT_ARCH_TRIPLET/girepository-1.0
-      - LDFLAGS: /snap/gnome-42-2204-sdk/current/usr/lib/$SNAPCRAFT_ARCH_TRIPLET:/snap/gnome-42-2204-sdk/current/usr/lib/girepository-1.0:$LDFLAGS
-      - LD_LIBRARY_PATH: /snap/gnome-42-2204-sdk/current/usr/lib/$SNAPCRAFT_ARCH_TRIPLET:/snap/gnome-42-2204-sdk/current/usr/lib/girepository-1.0:$LD_LIBRARY_PATH
+      - LDFLAGS: /snap/gnome-42-2204-sdk/current/usr/lib/$SNAPCRAFT_ARCH_TRIPLET:/snap/gnome-42-2204-sdk/current/usr/lib/girepository-1.0:/snap/ffmpeg-2204-sdk/current/usr/lib/$CRAFT_ARCH_TRIPLET:$LDFLAGS
+      - LD_LIBRARY_PATH: /snap/gnome-42-2204-sdk/current/usr/lib/$CRAFT_ARCH_TRIPLET:/snap/gnome-42-2204-sdk/current/usr/lib:/snap/ffmpeg-2204-sdk/current/usr/lib/$CRAFT_ARCH_TRIPLET:$LD_LIBRARY_PATH
     meson-parameters:
       - --prefix=/snap/video-trimmer/current/usr
+    build-snaps:
+      - ffmpeg-2204-sdk
     build-packages:
       - libgstreamer-plugins-good1.0-dev
     organize:
@@ -90,6 +58,13 @@ parts:
       - gstreamer1.0-plugins-ugly
       - gstreamer1.0-gl
 
+
+plugs:
+  ffmpeg-2204:
+    interface: content
+    target: ffmpeg-platform
+    default-provider: ffmpeg-2204
+
 slots:
   video-trimmer:
     interface: dbus
@@ -99,6 +74,10 @@ apps:
   video-trimmer:
     command: usr/bin/video-trimmer
     desktop: usr/share/applications/org.gnome.gitlab.YaLTeR.VideoTrimmer.desktop
+    environment:
+      GDK_DEBUG: portals
+      PATH: $SNAP/ffmpeg-platform/usr/bin:$PATH
+      LD_LIBRARY_PATH: $SNAP/ffmpeg-platform/usr/lib/$CRAFT_ARCH_TRIPLET:$LD_LIBRARY_PATH:$GI_TYPELIB_PATH:$GST_PLUGIN_PATH:$LIBGL_DRIVERS_PATH
     extensions: [ gnome ]
     common-id: org.gnome.gitlab.YaLTeR.VideoTrimmer 
     plugs:
